# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  18 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Add shfs to our list of net filesystems #61452.

    Add a '-u' parameter to depscan.sh to allow for updates only when 
    the config files have changed.  With /sbin/rc using this, we speed 
    up bootup by only regenerating the cache when need be #67976.  Also 
    add a '-u' parameter to env-update.sh for same reasons.

    Don't run depscan.sh in rc-update anymore since the cache files don't 
    depend on runlevels (which is all that rc-update modifies).

  16 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Update the default fstab /dev/shm mount to include the nodev, nosuid, 
    and noexec mount flags.  No reason for the filesystem to have those.

    Cleaned up the clock init script.  Moved the clock options out of 
    rc.conf and into its own conf.d/clock file.  Added support for the 
    weird Alpha consoles SRM/ARC since they need special config options.  
    Also made the syncing of system clock to hardware clock at shutdown 
    optional (with the default being off) #15834.  Don't try to set the 
    clock if running inside a coLinux environment #52870.

    Update default PATH ordering to try to follow default behavior in 
    other distro's and because it's logical that /usr/local should 
    override /usr which should override /.  Fixes #12531.

    Move devfs stuff out of baselayout and into the devfsd package.

    Don't run /sbin/pam_console_apply -r if using udev on /dev #50315.

  14 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix rc-status to work with new COLS code.

  14 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Allow users to mount ramfs/tmpfs/ramdisk as their svcdir and 
    stop assuming ramfs==ramdisk #64079.

  13 Oct 2004; Mike Frysinger <vapier@gentoo.org>:
